Fix bug #251 - Application Icon missing in snap.

--- a/snap/gui/bibletime.desktop
+++ b/snap/gui/bibletime.desktop
@@ -9,7 +9,7 @@ Comment[fi]=Helppokäyttöinen raamatunlukuohjelmisto
 Comment[fr]=Un outil d'étude biblique facile à utiliser
 Comment[it]=Un semplice strumento per studiare la Bibbia
 Exec=bibletime
-Icon=bibletime.svg
+Icon=${SNAP}/share/icons/hicolor/scalable/apps/info.bibletime.BibleTime.svg
 Name=BibleTime 
 Name[C]=BibleTime 
 Name[cs]=BibleTime 
