--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -82,10 +82,10 @@ parts:
             cp -r $SNAPCRAFT_PART_BUILD/docs/v3.0/* $SNAPCRAFT_PRIME/share/doc/bibletime
 
     bibletime:
-        source: https://github.com/bibletime/bibletime.git
-        source-type: git
-        source-tag: v3.0
+        source: https://github.com/bibletime/bibletime/archive/v3.0.zip
+        source-type: zip
         plugin: cmake
+        source-subdir: bibletime-3.0
         configflags: [
             "-DCMAKE_BUILD_TYPE=Release",
             "-DBT_RUNTIME_DOCDIR=share/doc/bibletime",
